Bug 1927406 - Update Owner and Peer of Toolkit::PasswordManager r=zeid
Differential Revision: https://phabricator.services.mozilla.com/D227012

UltraBlame original commit: 458c057c0bad30b54476589a2afdb86dbf2583cc

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-29T15
+31T09
 :
-14
+00
 :
-25
+11
 .
-266546
+146905
 +
 00
 :
@@ -1332,6 +1332,8 @@ nick
 :
 emk
 -
+&
+enndeakin
 bmo_id
 :
 6102
@@ -1738,6 +1740,19 @@ nick
 iain
 -
 &
+issammani
+bmo_id
+:
+708367
+name
+:
+Issam
+Mani
+nick
+:
+issammani
+-
+&
 itielyn8
 bmo_id
 :
@@ -2039,6 +2054,19 @@ Nicol
 nick
 :
 jnicol
+-
+&
+johannes
+bmo_id
+:
+723184
+name
+:
+Johannes
+Schmidt
+nick
+:
+johannes
 -
 &
 jonalmeida
@@ -15446,6 +15474,9 @@ owners_emeritus
 -
 Matthew
 Noorenberghe
+-
+*
+serg
 peers_emeritus
 :
 -
@@ -15457,6 +15488,12 @@ Rudie
 -
 Jared
 Wein
+-
+*
+tgiles
+-
+*
+sfoster
 url
 :
 https
@@ -15503,18 +15540,21 @@ owners
 :
 -
 *
-serg
+dlee
 peers
 :
 -
 *
-tgiles
+enndeakin
 -
 *
-dlee
+issammani
 -
 *
-sfoster
+johannes
+-
+*
+micah
 machine_name
 :
 password_manager
@@ -19189,7 +19229,7 @@ hashes
 :
 config
 :
-c9b41bc02e006b1f46ebab491e09382f7d41d99d
+0b795b86d62a546442fb92d06fdc4ba419ce57bc
 export
 :
-a7e7a2699aa14c56dc99524a267ee7b5db9438c7
+e245536a757e250ca84676f60a36549977689328
