Bug 1924774 - Enable ssl_grp_kem_mlkem768x25519 for WebRTC DTLS1.3 in Nigtly and Early beta r=bwc
Differential Revision: https://phabricator.services.mozilla.com/D225663

UltraBlame original commit: 72955c401956ec821d9a66e6d7d05efdf8b114e4

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -23079,6 +23079,36 @@ QUIC
 and
 TLS
 .
+dtlsWebRTCEnableMlkem
+:
+type
+:
+boolean
+setPref
+:
+branch
+:
+default
+pref
+:
+media
+.
+webrtc
+.
+enable_pq_dtls
+description
+:
+>
+-
+Whether
+to
+enable
+mlkem768x25519
+for
+DTLS
+in
+WebRTC
+.
 dtlsWebRTC
 :
 description
