Bug 1916412 - fix Android x86 recvmmsg seccomp failure r=glandium,supply-chain-reviewers,sunil
https://bugzilla.mozilla.org/show_bug.cgi?id=1910360 replaced NSPR with
quinn-udp for HTTP3 QUIC UDP IO on Firefox Nightly. Calls to `recvmmsg` were
prohibited by seccomp on Android x86. See
https://bugzilla.mozilla.org/show_bug.cgi?id=1910594, upstream quinn-udp
tracking issue: https://github.com/quinn-rs/quinn/issues/1947 and upstream
quinn-udp fix: https://github.com/quinn-rs/quinn/pull/1966

Now that the upstream fix is merged and released, this commit upgrads neqo_glue
to use quinn-udp `v0.5.6`. In addition, given the fix, quinn-udp can now be used
on Android x86 Firefox Nightly. Thus this commit also removes the conditional
around the `network.http.http3.use_nspr_for_io` pref.

Differential Revision: https://phabricator.services.mozilla.com/D220890

UltraBlame original commit: 768c0cdc9453e75f3adca22194c725f78d314cf2

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -36279,6 +36279,54 @@ code
 [
 audits
 .
+quinn
+-
+udp
+]
+]
+who
+=
+"
+Max
+Inden
+<
+mail
+max
+-
+inden
+.
+de
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+0
+.
+5
+.
+4
+-
+>
+0
+.
+5
+.
+6
+"
+[
+[
+audits
+.
 quote
 ]
 ]
