Bug 1916499 - Add searchForm support back to OpenSearch engines. r=Standard8
Differential Revision: https://phabricator.services.mozilla.com/D225968

UltraBlame original commit: 5082d347bbf799f076b99494de05f720a35c8997

--- a/browser/components/search/test/browser/browser.toml
+++ b/browser/components/search/test/browser/browser.toml
@@ -79,6 +79,27 @@ browser_426329
 js
 "
 ]
+support
+-
+files
+=
+[
+"
+test
+.
+html
+"
+"
+discovery
+.
+html
+"
+"
+426329
+.
+xml
+"
+]
 [
 "
 browser_addKeywordSearch
