Bug 1919861 - Add metrics for remote models running in CI - r=sparky,tarek,frontend-codestyle-reviewers,perftest-reviewers,Gijs
Differential Revision: https://phabricator.services.mozilla.com/D223990

UltraBlame original commit: bfe4f7bcf0e73023cf87bdfd1bb9a575e3565695

--- a/taskcluster/kinds/fetch/onnxruntime-web-fetch.yml
+++ b/taskcluster/kinds/fetch/onnxruntime-web-fetch.yml
@@ -294,8 +294,8 @@ sha256
 size
 :
 11105821
-xenova
-.
+onnx
+-
 all
 -
 minilm
@@ -335,4 +335,41 @@ L6
 v2
 revision
 :
-cb3d680149bf9a3209564e1b27ab3bb355b65707
+5f8986ea538762fd82a43a768d583a5a9d71d1ec
+path
+-
+prefix
+:
+"
+onnx
+-
+models
+/
+Xenova
+/
+all
+-
+MiniLM
+-
+L6
+-
+v2
+/
+main
+/
+"
+artifact
+-
+name
+:
+all
+-
+MiniLM
+-
+L6
+-
+v2
+.
+tar
+.
+zst
