--- a/python/mozperftest/perfdocs/config.yml
+++ b/python/mozperftest/perfdocs/config.yml
@@ -368,3 +368,35 @@ Encoding
 :
 "
 "
+toolkit
+/
+components
+/
+ml
+/
+tests
+/
+browser
+:
+description
+:
+"
+Performance
+tests
+running
+through
+Mochitest
+for
+ML
+Models
+"
+tests
+:
+"
+ML
+Test
+Model
+"
+:
+"
+"
