Backed out changeset bfe4f7bcf0e7 (bug 1919861) for causing bc failures  ModelHub.sys.mjs. CLOSED TREE
UltraBlame original commit: 390203d737f6722eed73e67190b4dbd5c0e83d1e

--- a/taskcluster/kinds/fetch/onnxruntime-web-fetch.yml
+++ b/taskcluster/kinds/fetch/onnxruntime-web-fetch.yml
@@ -294,8 +294,8 @@ sha256
 size
 :
 11105821
-onnx
--
+xenova
+.
 all
 -
 minilm
@@ -335,41 +335,4 @@ L6
 v2
 revision
 :
-5f8986ea538762fd82a43a768d583a5a9d71d1ec
-path
--
-prefix
-:
-"
-onnx
--
-models
-/
-Xenova
-/
-all
--
-MiniLM
--
-L6
--
-v2
-/
-main
-/
-"
-artifact
--
-name
-:
-all
--
-MiniLM
--
-L6
--
-v2
-.
-tar
-.
-zst
+cb3d680149bf9a3209564e1b27ab3bb355b65707
