Bug 1928248 - Replace androidx.work.await with androidx.concurrent.futures.await. r=android-reviewers,mcarare
Mirroring the upstream change:
https://android.googlesource.com/platform/frameworks/support/+/855613449e206093529129d46aa8488200b070da%5E%21/

Differential Revision: https://phabricator.services.mozilla.com/D227430

UltraBlame original commit: a314277223db482200bdd4878606f8409f0e01c4

--- a/mobile/android/android-components/components/feature/addons/build.gradle
+++ b/mobile/android/android-components/components/feature/addons/build.gradle
@@ -416,6 +416,10 @@ libstate
 testImplementation
 ComponentsDependencies
 .
+androidx_concurrent
+testImplementation
+ComponentsDependencies
+.
 androidx_test_core
 testImplementation
 ComponentsDependencies
