--- a/mobile/android/android-components/components/feature/syncedtabs/build.gradle
+++ b/mobile/android/android-components/components/feature/syncedtabs/build.gradle
@@ -335,6 +335,10 @@ test
 testImplementation
 ComponentsDependencies
 .
+androidx_concurrent
+testImplementation
+ComponentsDependencies
+.
 androidx_test_junit
 testImplementation
 ComponentsDependencies
