--- a/mobile/android/android-components/components/service/contile/build.gradle
+++ b/mobile/android/android-components/components/service/contile/build.gradle
@@ -183,6 +183,10 @@ sites
 testImplementation
 ComponentsDependencies
 .
+androidx_concurrent
+testImplementation
+ComponentsDependencies
+.
 androidx_test_core
 testImplementation
 ComponentsDependencies
