--- a/mobile/android/android-components/components/service/pocket/build.gradle
+++ b/mobile/android/android-components/components/service/pocket/build.gradle
@@ -290,6 +290,10 @@ androidx_arch_core_testing
 testImplementation
 ComponentsDependencies
 .
+androidx_concurrent
+testImplementation
+ComponentsDependencies
+.
 androidx_test_core
 testImplementation
 ComponentsDependencies
