--- a/dom/push/metrics.yaml
+++ b/dom/push/metrics.yaml
@@ -292,3 +292,76 @@ com
 expires
 :
 never
+content_encoding
+:
+type
+:
+labeled_counter
+description
+:
+>
+Which
+content
+encoding
+is
+being
+used
+for
+push
+.
+labels
+:
+-
+aes128gcm
+-
+aesgcm
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1928131
+data_reviews
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1928131
+notification_emails
+:
+-
+krosylight
+mozilla
+.
+com
+expires
+:
+never
