--- a/devtools/client/debugger/test/mochitest/browser_aj.toml
+++ b/devtools/client/debugger/test/mochitest/browser_aj.toml
@@ -2691,6 +2691,47 @@ javascript
 -
 tracer
 -
+sidebar
+-
+values
+-
+search
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+tsan
+"
+#
+Bug
+1832135
+"
+a11y_checks
+"
+#
+The
+tracer
+tree
+isn
+'
+t
+yet
+accessible
+]
+[
+"
+browser_dbg
+-
+javascript
+-
+tracer
+-
 values
 .
 js
