Bug 1926630 - Only register the mutation observer with the subtree root of the menu structure, to avoid duplicate notifications. r=mac-reviewers,bradwerth
Differential Revision: https://phabricator.services.mozilla.com/D226846

UltraBlame original commit: e369109c2e8750e3b2bbe40e527977f67b2aef4c

--- a/widget/tests/chrome.toml
+++ b/widget/tests/chrome.toml
@@ -908,6 +908,31 @@ xhtml
 ]
 [
 "
+test_native_context_menus
+.
+xhtml
+"
+]
+run
+-
+if
+=
+[
+"
+os
+=
+=
+'
+mac
+'
+"
+]
+#
+Cocoa
+widget
+test
+[
+"
 test_panel_mouse_coords
 .
 xhtml
