Bug 1928082 - Specify correct version of default-theme r=rpl,willdurand
Differential Revision: https://phabricator.services.mozilla.com/D227363

UltraBlame original commit: 96a295779152b51503c1e8db3c64edaa5aed2e92

--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell.toml
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell.toml
@@ -726,6 +726,40 @@ android
 ]
 [
 "
+test_default_theme
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
+#
+resource
+:
+/
+/
+default
+-
+theme
+not
+packaged
+on
+Android
+.
+[
+"
 test_delay_update_webextension
 .
 js
