--- a/toolkit/mozapps/update/tests/unit_aus_update/xpcshell.toml
+++ b/toolkit/mozapps/update/tests/unit_aus_update/xpcshell.toml
@@ -219,6 +219,67 @@ Bug
 1759035
 [
 "
+downloadExtrasFirefox
+.
+js
+"
+]
+firefox
+-
+appdir
+=
+"
+browser
+"
+skip
+-
+if
+=
+[
+"
+socketprocess_networking
+"
+#
+Bug
+1759035
+"
+appname
+!
+=
+'
+firefox
+'
+"
+]
+[
+"
+downloadExtrasNotFirefox
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+socketprocess_networking
+"
+#
+Bug
+1759035
+"
+appname
+=
+=
+'
+firefox
+'
+"
+]
+[
+"
 downloadInterruptedNoRecovery
 .
 js
