Bug 1893692: Notify concurrent profiles via remoting service. r=jhirsch,firefox-desktop-core-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D227026

UltraBlame original commit: 2ecdc12d9d7eea6e92fa0e7127e67283279d2690

--- a/browser/components/profiles/tests/browser/browser.toml
+++ b/browser/components/profiles/tests/browser/browser.toml
@@ -41,6 +41,34 @@ js
 ]
 [
 "
+browser_notify_changes
+.
+js
+"
+]
+run
+-
+if
+=
+[
+"
+os
+!
+=
+'
+linux
+'
+"
+]
+#
+Linux
+clients
+cannot
+remote
+themselves
+.
+[
+"
 browser_test_db_lazily_created
 .
 js
