Bug 1927170 - Add extra data type to OnboardingCardData to store additional data required for non-basic cards e.g. add-ons, toolbar cards r=android-reviewers,amejiamarmol
Differential Revision: https://phabricator.services.mozilla.com/D226934

UltraBlame original commit: 6840cc3786ac4ce90558c0082c0dae5cd1f997a5

--- a/mobile/android/fenix/app/onboarding.fml.yaml
+++ b/mobile/android/fenix/app/onboarding.fml.yaml
@@ -602,6 +602,56 @@ default
 [
 NEVER
 ]
+extra
+-
+data
+:
+type
+:
+Option
+<
+ExtraCardData
+>
+description
+:
+Optional
+extra
+data
+for
+cards
+that
+require
+additional
+data
+.
+default
+:
+null
+ExtraCardData
+:
+description
+:
+Holds
+data
+for
+cards
+that
+require
+additional
+data
+e
+.
+g
+.
+add
+-
+ons
+toolbar
+placement
+cards
+.
+fields
+:
 add
 -
 ons
