--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/vertex_state/correctness/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/vertex_state/correctness/cts.https.html.ini
@@ -22,6 +22,23 @@ implementation
 -
 status
 :
+if
+os
+=
+=
+"
+linux
+"
+:
+backlog
+if
+os
+=
+=
+"
+mac
+"
+:
 backlog
 [
 :
@@ -568,6 +585,14 @@ unorm10
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -724,6 +749,14 @@ implementation
 -
 status
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 backlog
 [
 :
@@ -1234,6 +1267,14 @@ unorm10
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -1336,6 +1377,23 @@ implementation
 -
 status
 :
+if
+os
+=
+=
+"
+linux
+"
+:
+backlog
+if
+os
+=
+=
+"
+mac
+"
+:
 backlog
 [
 :
@@ -1853,6 +1911,14 @@ unorm10
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+linux
+"
 :
 FAIL
 [
@@ -1955,6 +2021,14 @@ implementation
 -
 status
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 backlog
 [
 :
@@ -2465,6 +2539,14 @@ unorm10
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -2567,6 +2649,14 @@ implementation
 -
 status
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 backlog
 [
 :
@@ -2812,9 +2902,6 @@ unorm10
 2
 "
 ]
-expected
-:
-FAIL
 [
 :
 format
@@ -2871,6 +2958,14 @@ implementation
 -
 status
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 backlog
 [
 :
@@ -3381,6 +3476,14 @@ unorm10
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
@@ -3483,6 +3586,14 @@ implementation
 -
 status
 :
+if
+os
+=
+=
+"
+mac
+"
+:
 backlog
 [
 :
@@ -3993,6 +4104,14 @@ unorm10
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
