--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/render_pipeline/vertex_state/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/validation/render_pipeline/vertex_state/cts.https.html.ini
@@ -17264,26 +17264,6 @@ add
 0
 }
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-FAIL
 [
 :
 format
@@ -17392,26 +17372,6 @@ add
 4
 }
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-FAIL
 [
 :
 format
@@ -17457,26 +17417,6 @@ add
 4
 }
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-FAIL
 [
 :
 format
@@ -17587,26 +17527,6 @@ add
 8
 }
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-FAIL
 [
 :
 format
@@ -17651,26 +17571,6 @@ add
 0
 }
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-FAIL
 [
 :
 format
@@ -17779,26 +17679,6 @@ add
 4
 }
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-FAIL
 [
 :
 format
@@ -17844,26 +17724,6 @@ add
 4
 }
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-FAIL
 [
 :
 format
@@ -17974,26 +17834,6 @@ add
 8
 }
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
-if
-os
-=
-=
-"
-linux
-"
-:
-FAIL
 [
 :
 format
@@ -21049,6 +20889,14 @@ unorm10
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
