Bug 1924526 - Text Fragments: Implement new chrome-only APIs to access and remove text directive ranges. r=farre,dom-core
Differential Revision: https://phabricator.services.mozilla.com/D225536

UltraBlame original commit: 02495f5285aaf7104c1eaeb781b41e71d33b06d4

--- a/dom/base/test/mochitest.toml
+++ b/dom/base/test/mochitest.toml
@@ -7337,6 +7337,23 @@ html
 ]
 [
 "
+test_text
+-
+fragments
+-
+get
+-
+text
+-
+directive
+-
+ranges
+.
+html
+"
+]
+[
+"
 test_textnode_normalize_in_selection
 .
 html
