--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -6884,6 +6884,49 @@ recommended
 stories
 on
 newtab
+cardRefreshEnabled
+:
+type
+:
+boolean
+setPref
+:
+branch
+:
+user
+pref
+:
+browser
+.
+newtabpage
+.
+activity
+-
+stream
+.
+discoverystream
+.
+sections
+.
+cards
+.
+enabled
+description
+:
+>
+-
+Enable
+the
+revised
+pocket
+story
+card
+UI
+in
+recommended
+stories
+on
+newtab
 localeSectionstConfig
 :
 type
