Bug 1928099 - feat(webgpu): impl. `rgb10a2uint` texture format r=webgpu-reviewers,webidl,saschanaz,jimb,smaug
Differential Revision: https://phabricator.services.mozilla.com/D227346

UltraBlame original commit: 6f627cf96c9cc6a47602f170d8399dcbc59c8df2

--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/command_buffer/copyTextureToTexture/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/command_buffer/copyTextureToTexture/cts.https.html.ini
@@ -7698,6 +7698,25 @@ dimension
 expected
 :
 if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
 not
 debug
 :
@@ -12299,11 +12318,6 @@ debug
 TIMEOUT
 NOTRUN
 ]
-if
-not
-debug
-:
-FAIL
 [
 :
 srcFormat
@@ -12327,6 +12341,13 @@ dimension
 expected
 :
 if
+os
+=
+=
+"
+win
+"
+and
 debug
 :
 [
@@ -12334,10 +12355,57 @@ TIMEOUT
 NOTRUN
 ]
 if
+os
+=
+=
+"
+win
+"
+and
 not
 debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
 [
 :
 srcFormat
@@ -12361,6 +12429,13 @@ dimension
 expected
 :
 if
+os
+=
+=
+"
+win
+"
+and
 debug
 :
 [
@@ -12368,10 +12443,57 @@ TIMEOUT
 NOTRUN
 ]
 if
+os
+=
+=
+"
+win
+"
+and
 not
 debug
 :
 FAIL
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
 [
 :
 srcFormat
