--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/command_buffer/image_copy/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/command_buffer/image_copy/cts.https.html.ini
@@ -2900,9 +2900,6 @@ dimension
 2d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -6712,9 +6709,6 @@ dimension
 2d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -6742,6 +6736,14 @@ dimension
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
 :
 FAIL
 [
@@ -10628,9 +10630,6 @@ dimension
 2d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -10658,6 +10657,14 @@ dimension
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
 :
 FAIL
 [
@@ -11503,11 +11510,6 @@ offsets_and_sizes
 :
 *
 ]
-implementation
--
-status
-:
-backlog
 [
 :
 initMethod
@@ -14916,9 +14918,6 @@ dimension
 1d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -14945,9 +14944,6 @@ dimension
 2d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -14974,9 +14970,6 @@ dimension
 3d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -19405,9 +19398,6 @@ dimension
 1d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -19434,9 +19424,6 @@ dimension
 2d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -19463,9 +19450,6 @@ dimension
 3d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -23894,9 +23878,6 @@ dimension
 1d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -23923,9 +23904,6 @@ dimension
 2d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -23952,9 +23930,6 @@ dimension
 3d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -28841,9 +28816,6 @@ dimension
 1d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -28870,9 +28842,6 @@ dimension
 2d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -43357,9 +43326,6 @@ dimension
 1d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -43386,9 +43352,6 @@ dimension
 2d
 "
 ]
-expected
-:
-FAIL
 [
 :
 initMethod
@@ -43416,6 +43379,14 @@ dimension
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
 :
 FAIL
 [
