--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/resource_init/texture_zero/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/resource_init/texture_zero/cts.https.html.ini
@@ -529,9 +529,6 @@ format
 rgb10a2uint
 "
 ]
-expected
-:
-FAIL
 [
 :
 dimension
@@ -1276,9 +1273,6 @@ format
 rgb10a2uint
 "
 ]
-expected
-:
-FAIL
 [
 :
 dimension
@@ -2029,9 +2023,6 @@ format
 rgb10a2uint
 "
 ]
-expected
-:
-FAIL
 [
 :
 dimension
@@ -3306,6 +3297,23 @@ rgb10a2uint
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
 FAIL
 [
 :
@@ -4884,6 +4892,23 @@ rgb10a2uint
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
 FAIL
 [
 :
@@ -6239,6 +6264,14 @@ rgb10a2uint
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
 FAIL
 [
 :
@@ -7656,6 +7689,23 @@ rgb10a2uint
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
 FAIL
 [
 :
@@ -9123,6 +9173,23 @@ rgb10a2uint
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
 FAIL
 [
 :
@@ -10366,6 +10433,14 @@ rgb10a2uint
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
 :
 FAIL
 [
