Bug 1928259 - Extend dom.contentprocess.buildID_mismatch_false_positive to Firefox 150 r=jld
Differential Revision: https://phabricator.services.mozilla.com/D227476

UltraBlame original commit: 8caf2cd861d5f1f2577c2c9b02b8caf89157974c

--- a/dom/metrics.yaml
+++ b/dom/metrics.yaml
@@ -4311,6 +4311,16 @@ bugzil
 la
 /
 1866197
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1928259
 data_reviews
 :
 -
@@ -4373,6 +4383,16 @@ bugzil
 la
 /
 1866197
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1928259
 notification_emails
 :
 -
@@ -4382,7 +4402,7 @@ mozilla
 com
 expires
 :
-135
+150
 telemetry_mirror
 :
 DOM_CONTENTPROCESS_BUILDID_MISMATCH_FALSE_POSITIVE
