Bug 1924578 - Disable DMABUF_WEBGL on Nvidia driver. r=aosmond
This adds a DMABUF_WEBGL feature that can be independently blocklisted from DMABUF itself.

After that, this adds a blocklist entry for the Nvidia driver which gives incorrect rendering.

Differential Revision: https://phabricator.services.mozilla.com/D227598

UltraBlame original commit: f0ffcbcde75eb9f26b573808d8320151846c63c4

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -107302,13 +107302,13 @@ webgl
 enabled
 type
 :
-RelaxedAtomicBool
+bool
 value
 :
 true
 mirror
 :
-always
+once
 #
 Use
 gdk_window_move_to_rect
