Backed out changeset f0ffcbcde75e (bug 1924578) for causing build bustages. CLOSED TREE
UltraBlame original commit: a969582c9b85286eeb62a0c831707b8d33d53062

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -107302,13 +107302,13 @@ webgl
 enabled
 type
 :
-bool
+RelaxedAtomicBool
 value
 :
 true
 mirror
 :
-once
+always
 #
 Use
 gdk_window_move_to_rect
