Bug 1928871 - temporarily disable browser_exslt_timezone_load.js on linux and osx because of permafailures due to winter hour change. r=dmeehan
Differential Revision: https://phabricator.services.mozilla.com/D227785

UltraBlame original commit: 87b5c1c3ff5a11cbb563808772133419aa3d5c63

--- a/browser/components/resistfingerprinting/test/browser/browser.toml
+++ b/browser/components/resistfingerprinting/test/browser/browser.toml
@@ -445,10 +445,32 @@ os
 win
 '
 "
-]
 #
 Bug
 1918104
+"
+os
+=
+=
+'
+linux
+'
+"
+#
+Bug
+1928871
+"
+os
+=
+=
+'
+mac
+'
+"
+#
+Bug
+1928871
+]
 [
 "
 browser_hwconcurrency_etp_iframes
