Bug 1928872 - temporarily disable multiple test on linux, osx and win because of permafailures due to winter hour change. r=dmeehan
Depends on D227785

Differential Revision: https://phabricator.services.mozilla.com/D227786

UltraBlame original commit: c3c6d6835d493cf05b8f30070b5d5e0e9a9017cf

--- a/toolkit/components/resistfingerprinting/tests/browser/browser.toml
+++ b/toolkit/components/resistfingerprinting/tests/browser/browser.toml
@@ -156,12 +156,90 @@ browser_service_worker_granular_overrides
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+"
+#
+Bug
+1928872
+"
+os
+=
+=
+'
+mac
+'
+"
+#
+Bug
+1928872
+"
+os
+=
+=
+'
+win
+'
+"
+#
+Bug
+1928872
+]
 [
 "
 browser_service_worker_overrides
 .
 js
 "
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+"
+#
+Bug
+1928872
+"
+os
+=
+=
+'
+mac
+'
+"
+#
+Bug
+1928872
+"
+os
+=
+=
+'
+win
+'
+"
+#
+Bug
+1928872
 ]
 [
 "
@@ -191,10 +269,88 @@ browser_worker_granular_overrides
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+"
+#
+Bug
+1928872
+"
+os
+=
+=
+'
+mac
+'
+"
+#
+Bug
+1928872
+"
+os
+=
+=
+'
+win
+'
+"
+#
+Bug
+1928872
+]
 [
 "
 browser_worker_overrides
 .
 js
 "
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+"
+#
+Bug
+1928872
+"
+os
+=
+=
+'
+mac
+'
+"
+#
+Bug
+1928872
+"
+os
+=
+=
+'
+win
+'
+"
+#
+Bug
+1928872
 ]
