Bug 1921433 - Update to black 24.8.0 r=linter-reviewers,ahal
Differential Revision: https://phabricator.services.mozilla.com/D223962

UltraBlame original commit: e35bebfc58cfe6792744b73c4dffbcd464cbb709

--- a/tools/lint/python/black_requirements.in
+++ b/tools/lint/python/black_requirements.in
@@ -1,9 +1,9 @@
 black
 =
 =
-23
+24
 .
-3
+8
 .
 0
 typing
@@ -11,13 +11,19 @@ typing
 extensions
 =
 =
-3
-.
-10
+4
 .
 0
 .
-2
+1
+;
+python_version
+<
+"
+3
+.
+11
+"
 dataclasses
 =
 =
