Bug 1928459 - [wpt-sync] Update web-platform-tests to a2112d6c9b2e3916a2f127046c2f3aef3f75a0b8, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: a2112d6c9b2e3916a2f127046c2f3aef3f75a0b8
wpt-type: landing

UltraBlame original commit: 08a5212aef8ba52d50a013a433e34916547ed2b1

--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_faster_collector.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_faster_collector.https.window.js.ini
@@ -50,28 +50,8 @@ dedicated_worker
 expected
 :
 if
-(
-os
-=
-=
-"
-win
-"
-)
-and
 debug
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-:
-TIMEOUT
-if
 (
 os
 =
@@ -81,7 +61,23 @@ linux
 "
 )
 and
+fission
+:
+[
+ERROR
+CRASH
+]
+if
 debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 fission
