--- a/testing/web-platform/meta/css/css-view-transitions/navigation/pagereveal-no-view-transition-new-opt-out.html.ini
+++ b/testing/web-platform/meta/css/css-view-transitions/navigation/pagereveal-no-view-transition-new-opt-out.html.ini
@@ -18,6 +18,12 @@ html
 expected
 :
 if
+not
+asan
+and
+not
+fission
+and
 (
 os
 =
@@ -26,37 +32,14 @@ os
 linux
 "
 )
-and
-not
-tsan
-and
-not
-debug
-and
-fission
-and
-asan
 :
 [
 ERROR
 TIMEOUT
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
+asan
 and
-not
-tsan
-and
-debug
-and
-not
 fission
 :
 [
@@ -64,3 +47,30 @@ ERROR
 TIMEOUT
 ]
 ERROR
+[
+\
+n
+View
+transitions
+:
+null
+event
+.
+viewTransition
+when
+new
+page
+removes
+opt
+-
+in
+\
+n
+before
+pagereveal
+\
+n
+]
+expected
+:
+TIMEOUT
