--- a/testing/web-platform/meta/css/cssom-view/scroll-behavior-scrollintoview-nested.html.ini
+++ b/testing/web-platform/meta/css/cssom-view/scroll-behavior-scrollintoview-nested.html.ini
@@ -23,6 +23,10 @@ behavior
 expected
 :
 if
+fission
+and
+debug
+and
 (
 os
 =
@@ -31,42 +35,40 @@ os
 linux
 "
 )
-and
+:
+[
+PASS
+FAIL
+]
+if
 not
 fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
 :
 [
 PASS
 FAIL
 ]
 if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
 not
-debug
+fission
+and
+(
+os
+=
+=
+"
+android
+"
+)
 :
 [
 FAIL
