--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/__dir__.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/__dir__.ini
@@ -11,6 +11,18 @@ useCrossOriginEmbedderPolicy
 :
 true
 ]
+leak
+-
+threshold
+:
+[
+default
+:
+51200
+tab
+:
+1331200
+]
 lsan
 -
 allowed
@@ -26,6 +38,7 @@ Realloc
 Then
 URLSearchParams
 already_AddRefed
+createTable
 maybe_pod_malloc
 mozilla
 :
@@ -194,16 +207,4 @@ nsStringBuffer
 :
 Alloc
 operator
-]
-leak
--
-threshold
-:
-[
-default
-:
-51200
-tab
-:
-1331200
 ]
