--- a/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-allow-popups-to-same-origin.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-allow-popups-to-same-origin.https.html.ini
@@ -1216,33 +1216,12 @@ html
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-debug
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 [
 OK
@@ -1278,33 +1257,12 @@ html
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-not
-debug
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
 :
 [
 OK
@@ -1340,33 +1298,12 @@ html
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-debug
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 [
 OK
@@ -1402,15 +1339,37 @@ last
 expected
 :
 if
+(
 os
 =
 =
 "
 android
 "
+)
+and
+debug
 :
 [
 OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+OK
+ERROR
 TIMEOUT
 ]
 [
@@ -1443,39 +1402,12 @@ html
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-not
-swgl
-and
-debug
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-swgl
-and
-not
-debug
 :
 [
 OK
