--- a/testing/web-platform/meta/scroll-animations/css/animation-timeline-view-functional-notation.tentative.html.ini
+++ b/testing/web-platform/meta/scroll-animations/css/animation-timeline-view-functional-notation.tentative.html.ini
@@ -79,7 +79,19 @@ mac
 :
 [
 FAIL
+TIMEOUT
 NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
 TIMEOUT
 ]
 FAIL
@@ -124,8 +136,20 @@ mac
 :
 [
 FAIL
-NOTRUN
 TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+NOTRUN
 ]
 FAIL
 [
@@ -170,8 +194,8 @@ mac
 :
 [
 FAIL
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 os
@@ -183,8 +207,8 @@ linux
 :
 [
 FAIL
-TIMEOUT
 NOTRUN
+TIMEOUT
 ]
 FAIL
 [
@@ -363,8 +387,8 @@ linux
 :
 [
 FAIL
-TIMEOUT
 NOTRUN
+TIMEOUT
 ]
 FAIL
 [
