--- a/testing/web-platform/meta/svg/animations/scripted/animatetransform-type-missing-value-default.html.ini
+++ b/testing/web-platform/meta/svg/animations/scripted/animatetransform-type-missing-value-default.html.ini
@@ -40,37 +40,18 @@ os
 =
 =
 "
-win
+linux
 "
 )
 :
+[
 PASS
+FAIL
+]
 if
+not
 debug
-and
-(
-os
-=
-=
-"
-mac
-"
-)
 :
-PASS
-if
-debug
-and
-(
-os
-=
-=
-"
-android
-"
-)
-:
-PASS
 [
 PASS
 FAIL
