--- a/testing/web-platform/meta/css/css-grid/alignment/grid-align-baseline-line-clamp-002.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-grid/alignment/grid-align-baseline-line-clamp-002.tentative.html.ini
@@ -96,67 +96,36 @@ PASS
 FAIL
 ]
 if
-(
 os
 =
 =
 "
-linux
+win
 "
-)
-and
-not
-debug
-and
-asan
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+mac
 "
-)
-and
-debug
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+android
 "
-)
-and
-not
-debug
-and
-not
-asan
 :
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
 [
 .
 target
@@ -218,67 +187,36 @@ PASS
 FAIL
 ]
 if
-(
 os
 =
 =
 "
-linux
+win
 "
-)
-and
-not
-debug
-and
-asan
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+mac
 "
-)
-and
-debug
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+android
 "
-)
-and
-not
-debug
-and
-not
-asan
 :
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
 [
 .
 target
@@ -340,64 +278,33 @@ PASS
 FAIL
 ]
 if
-(
 os
 =
 =
 "
-linux
+win
 "
-)
-and
-not
-debug
-and
-asan
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+mac
 "
-)
-and
-debug
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+android
 "
-)
-and
-not
-debug
-and
-not
-asan
 :
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
