--- a/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-to-unsafe-none.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-to-unsafe-none.https.html.ini
@@ -1335,15 +1335,37 @@ html
 expected
 :
 if
+(
 os
 =
 =
 "
 android
 "
+)
+and
+debug
 :
 [
 OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+OK
+ERROR
 TIMEOUT
 ]
 [
