Bug 1925999 - Disable test_http3.js on linux with socketprocess_networking for permafailing on opt,asan,ccov platforms. r=necko-reviewers,kershaw DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D227768

UltraBlame original commit: 3d808dad817357ea9096f11d7bf0a810c0fdc203

--- a/netwerk/test/unit/xpcshell.toml
+++ b/netwerk/test/unit/xpcshell.toml
@@ -3563,6 +3563,46 @@ cgi
 id
 =
 1807931
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+!
+debug
+&
+&
+!
+fission
+&
+&
+socketprocess_networking
+"
+#
+Bug
+1925999
 ]
 run
 -
