--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -86027,6 +86027,65 @@ mirror
 always
 #
 When
+network
+.
+http
+.
+http3
+.
+alt
+-
+svc
+-
+mapping
+-
+for
+-
+testing
+is
+set
+only
+use
+#
+HTTP
+/
+3
+to
+connect
+.
+-
+name
+:
+network
+.
+http
+.
+http3
+.
+force
+-
+use
+-
+alt
+-
+svc
+-
+mapping
+-
+for
+-
+testing
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
+When
 true
 a
 http
