Bug 1928322 - Switch android wrench builds from arm7 to aarch64. r=gfx-reviewers,taskgraph-reviewers,jmaher,aosmond
Newer devices often only support aarch64 binaries, and we no longer
run on any 32bit devices in CI, so switch the default build
architecture. Developers will still be able to build arm7 binaries if
required for local testing.

Differential Revision: https://phabricator.services.mozilla.com/D227514

UltraBlame original commit: 72417143b6c1422ef514362e1a95a6b110459f5f

--- a/taskcluster/kinds/webrender/kind.yml
+++ b/taskcluster/kinds/webrender/kind.yml
@@ -3173,7 +3173,7 @@ build
 -
 android
 -
-arm
+aarch64
 /
 debug
 fetches
@@ -3327,7 +3327,7 @@ p5
 -
 0
 -
-arm7
+aarch64
 /
 debug
 symbol
@@ -3504,7 +3504,7 @@ build
 -
 android
 -
-arm
+aarch64
 /
 opt
 fetches
@@ -3658,7 +3658,7 @@ p5
 -
 0
 -
-arm7
+aarch64
 /
 opt
 symbol
@@ -3837,7 +3837,7 @@ build
 -
 android
 -
-arm
+aarch64
 /
 debug
 fetches
@@ -3991,7 +3991,7 @@ a51
 -
 0
 -
-arm7
+aarch64
 /
 debug
 symbol
@@ -4170,7 +4170,7 @@ build
 -
 android
 -
-arm
+aarch64
 /
 opt
 fetches
@@ -4324,7 +4324,7 @@ a51
 -
 0
 -
-arm7
+aarch64
 /
 opt
 symbol
