Bug 1928322 - Switch android wrench tests from Samsung A51 to Samsung A55 and Pixel 6. r=gfx-reviewers,taskgraph-reviewers,jmaher,aosmond
Differential Revision: https://phabricator.services.mozilla.com/D227518

UltraBlame original commit: 3fc3f2e27bc4e2e326e8880b05f3c628466d6949

--- a/taskcluster/kinds/webrender/kind.yml
+++ b/taskcluster/kinds/webrender/kind.yml
@@ -3724,7 +3724,7 @@ android
 -
 hw
 -
-a51
+p6
 -
 debug
 :
@@ -3736,9 +3736,7 @@ wrench
 reftests
 on
 Android
-Samsung
-Galaxy
-A51
+Pixel6
 attributes
 :
 build_platform
@@ -3756,7 +3754,7 @@ gw
 -
 perf
 -
-a51
+p6
 worker
 :
 max
@@ -3985,9 +3983,9 @@ android
 -
 hw
 -
-a51
+p6
 -
-11
+13
 -
 0
 -
@@ -4057,7 +4055,7 @@ android
 -
 hw
 -
-a51
+p6
 -
 opt
 :
@@ -4069,9 +4067,7 @@ wrench
 reftests
 on
 Android
-Samsung
-Galaxy
-A51
+Pixel6
 attributes
 :
 build_platform
@@ -4089,7 +4085,7 @@ gw
 -
 perf
 -
-a51
+p6
 worker
 :
 max
@@ -4318,9 +4314,675 @@ android
 -
 hw
 -
-a51
+p6
 -
-11
+13
+-
+0
+-
+aarch64
+/
+opt
+symbol
+:
+WR
+(
+wrench
+)
+when
+:
+files
+-
+changed
+:
+-
+'
+gfx
+/
+wr
+/
+*
+*
+'
+-
+'
+testing
+/
+mozharness
+/
+scripts
+/
+android_
+*
+.
+py
+'
+-
+'
+testing
+/
+mozharness
+/
+configs
+/
+android
+/
+*
+.
+py
+'
+-
+'
+testing
+/
+mozbase
+/
+mozdevice
+/
+*
+*
+'
+android
+-
+hw
+-
+a55
+-
+debug
+:
+description
+:
+Run
+debug
+wrench
+reftests
+on
+Android
+Samsung
+Galaxy
+A55
+attributes
+:
+build_platform
+:
+android
+worker
+-
+type
+:
+t
+-
+bitbar
+-
+gw
+-
+perf
+-
+a55
+worker
+:
+max
+-
+run
+-
+time
+:
+5400
+artifacts
+:
+-
+type
+:
+directory
+name
+:
+public
+/
+build
+/
+logs
+path
+:
+build
+/
+logs
+env
+:
+MOZHARNESS_SCRIPT
+:
+android_wrench
+.
+py
+MOZHARNESS_CONFIG
+:
+android
+/
+wrench
+.
+py
+MOZ_FETCHES_DIR
+:
+fetches
+PYTHONPATH
+:
+"
+fetches
+/
+mozdevice
+:
+fetches
+/
+six
+"
+dependencies
+:
+webrender
+-
+wrench
+-
+android
+-
+debug
+:
+webrender
+-
+wrench
+-
+android
+-
+debug
+android
+-
+build
+:
+build
+-
+android
+-
+aarch64
+/
+debug
+fetches
+:
+webrender
+-
+wrench
+-
+android
+-
+debug
+:
+-
+artifact
+:
+'
+wrench
+-
+debug
+.
+apk
+'
+extract
+:
+false
+-
+'
+reftests
+.
+tar
+.
+gz
+'
+-
+'
+mozdevice
+.
+tar
+.
+gz
+'
+-
+'
+six
+.
+tar
+.
+gz
+'
+android
+-
+build
+:
+-
+artifact
+:
+'
+mozharness
+.
+zip
+'
+dest
+:
+'
+mozharness
+'
+run
+:
+using
+:
+run
+-
+task
+checkout
+:
+false
+run
+-
+as
+-
+root
+:
+true
+command
+:
+>
+-
+export
+WRENCH_APK
+=
+MOZ_FETCHES_DIR
+/
+wrench
+-
+debug
+.
+apk
+&
+&
+export
+WRENCH_REFTESTS
+=
+MOZ_FETCHES_DIR
+/
+reftests
+&
+&
+export
+MOZHARNESS_PATH
+=
+MOZ_FETCHES_DIR
+/
+mozharness
+&
+&
+python3
+{
+MOZHARNESS_PATH
+}
+/
+scripts
+/
+{
+MOZHARNESS_SCRIPT
+}
+-
+-
+config
+-
+file
+{
+MOZHARNESS_PATH
+}
+/
+configs
+/
+{
+MOZHARNESS_CONFIG
+}
+treeherder
+:
+platform
+:
+android
+-
+hw
+-
+a55
+-
+14
+-
+0
+-
+aarch64
+/
+debug
+symbol
+:
+WR
+(
+wrench
+)
+when
+:
+files
+-
+changed
+:
+-
+'
+gfx
+/
+wr
+/
+*
+*
+'
+-
+'
+testing
+/
+mozharness
+/
+scripts
+/
+android_
+*
+.
+py
+'
+-
+'
+testing
+/
+mozharness
+/
+configs
+/
+android
+/
+*
+.
+py
+'
+-
+'
+testing
+/
+mozbase
+/
+mozdevice
+/
+*
+*
+'
+android
+-
+hw
+-
+a55
+-
+opt
+:
+description
+:
+Run
+opt
+wrench
+reftests
+on
+Android
+Samsung
+Galaxy
+A55
+attributes
+:
+build_platform
+:
+android
+worker
+-
+type
+:
+t
+-
+bitbar
+-
+gw
+-
+perf
+-
+a55
+worker
+:
+max
+-
+run
+-
+time
+:
+5400
+artifacts
+:
+-
+type
+:
+directory
+name
+:
+public
+/
+build
+/
+logs
+path
+:
+build
+/
+logs
+env
+:
+MOZHARNESS_SCRIPT
+:
+android_wrench
+.
+py
+MOZHARNESS_CONFIG
+:
+android
+/
+wrench
+.
+py
+MOZ_FETCHES_DIR
+:
+fetches
+PYTHONPATH
+:
+"
+fetches
+/
+mozdevice
+:
+fetches
+/
+six
+"
+dependencies
+:
+webrender
+-
+wrench
+-
+android
+-
+release
+:
+webrender
+-
+wrench
+-
+android
+-
+release
+android
+-
+build
+:
+build
+-
+android
+-
+aarch64
+/
+opt
+fetches
+:
+webrender
+-
+wrench
+-
+android
+-
+release
+:
+-
+artifact
+:
+'
+wrench
+-
+release
+.
+apk
+'
+extract
+:
+false
+-
+'
+reftests
+.
+tar
+.
+gz
+'
+-
+'
+mozdevice
+.
+tar
+.
+gz
+'
+-
+'
+six
+.
+tar
+.
+gz
+'
+android
+-
+build
+:
+-
+artifact
+:
+'
+mozharness
+.
+zip
+'
+dest
+:
+'
+mozharness
+'
+run
+:
+using
+:
+run
+-
+task
+checkout
+:
+false
+run
+-
+as
+-
+root
+:
+true
+command
+:
+>
+-
+export
+WRENCH_APK
+=
+MOZ_FETCHES_DIR
+/
+wrench
+-
+release
+.
+apk
+&
+&
+export
+WRENCH_REFTESTS
+=
+MOZ_FETCHES_DIR
+/
+reftests
+&
+&
+export
+MOZHARNESS_PATH
+=
+MOZ_FETCHES_DIR
+/
+mozharness
+&
+&
+python3
+{
+MOZHARNESS_PATH
+}
+/
+scripts
+/
+{
+MOZHARNESS_SCRIPT
+}
+-
+-
+config
+-
+file
+{
+MOZHARNESS_PATH
+}
+/
+configs
+/
+{
+MOZHARNESS_CONFIG
+}
+treeherder
+:
+platform
+:
+android
+-
+hw
+-
+a55
+-
+14
 -
 0
 -
