--- a/toolkit/components/antitracking/bouncetrackingprotection/metrics.yaml
+++ b/toolkit/components/antitracking/bouncetrackingprotection/metrics.yaml
@@ -726,134 +726,38 @@ ClearDataService
 type
 :
 boolean
-enabled_at_startup
-:
-type
-:
-boolean
-description
-:
->
-Keeps
-track
-of
-whether
-the
-feature
-is
-enabled
-at
-startup
-.
-bugs
-:
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1893964
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1922601
-data_reviews
-:
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1893964
-#
-c4
-data_sensitivity
-:
--
-technical
-notification_emails
-:
--
-pbz
-mozilla
-.
-com
--
-bvandersloot
-mozilla
-.
-com
--
-manuel
-mozilla
-.
-com
-expires
-:
-140
-enabled_dry_run_mode_at_startup
-:
-type
-:
-boolean
-description
-:
->
-Keeps
-track
-of
-whether
-the
-feature
-is
-enabled
-and
-running
-in
-dry
--
-run
 mode
-at
-startup
+:
+type
+:
+quantity
+lifetime
+:
+application
+unit
+:
+intPref
+description
+:
+>
+Records
+the
+pref
+value
+of
+privacy
+.
+bounceTrackingProtection
+.
+mode
+.
+Values
+are
+any
+of
+nsIBounceTrackingProtection
+#
+Modes
 .
 bugs
 :
@@ -874,25 +778,7 @@ cgi
 ?
 id
 =
-1893964
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1922601
+1928062
 data_reviews
 :
 -
@@ -912,9 +798,7 @@ cgi
 ?
 id
 =
-1893964
-#
-c4
+1928062
 data_sensitivity
 :
 -
