--- a/mobile/android/fenix/app/src/main/AndroidManifest.xml
+++ b/mobile/android/fenix/app/src/main/AndroidManifest.xml
@@ -1037,6 +1037,32 @@ intent
 filter
 >
 <
+meta
+-
+data
+android
+:
+name
+=
+"
+android
+.
+app
+.
+shortcuts
+"
+android
+:
+resource
+=
+"
+xml
+/
+shortcuts
+"
+/
+>
+<
 /
 activity
 -
