Bug 1928262 - Extend intl.ui.browserLanguage probes to Firefox 148, r=bolsson,settings-reviewers,mossop
Differential Revision: https://phabricator.services.mozilla.com/D227809

UltraBlame original commit: 0edbe3fae6b8ef14bdeb717545fcecec3f31b405

--- a/browser/components/preferences/metrics.yaml
+++ b/browser/components/preferences/metrics.yaml
@@ -903,6 +903,16 @@ bugzil
 la
 /
 1911321
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1928262
 data_reviews
 :
 &
@@ -987,10 +997,25 @@ bugzil
 la
 /
 1911321
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1928262
 notification_emails
 :
 &
 intl_ui_browserLanguage_manage_emails
+-
+earo
+mozilla
+.
+com
 -
 flod
 mozilla
@@ -1001,14 +1026,9 @@ mstriemer
 mozilla
 .
 com
--
-earo
-mozilla
-.
-com
 expires
 :
-135
+148
 extra_keys
 :
 &
