--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -85925,9 +85925,19 @@ enable_kyber
 type
 :
 RelaxedAtomicBool
+#
+ifdef
+EARLY_BETA_OR_EARLIER
+value
+:
+IS_NOT_ANDROID
+#
+else
 value
 :
 false
+#
+endif
 mirror
 :
 always
