Bug 1927657 - Add Mac IO Surface support for Rust r=webgpu-reviewers,supply-chain-reviewers,nical
The change is preparation for Bug 1927658.

Add io-surface and dependent crates. io-surface is already audited at supply-chain/audits.toml.

Differential Revision: https://phabricator.services.mozilla.com/D227235

UltraBlame original commit: dd9e4e4efc0febc12d791201d0c0f054368de649

--- a/gfx/wgpu_bindings/Cargo.toml
+++ b/gfx/wgpu_bindings/Cargo.toml
@@ -508,6 +508,45 @@ Win32_Graphics_Direct3D12
 ]
 }
 [
+target
+.
+'
+cfg
+(
+target_os
+=
+"
+macos
+"
+)
+'
+.
+dependencies
+]
+objc
+=
+"
+0
+.
+2
+"
+metal
+=
+"
+0
+.
+29
+"
+io
+-
+surface
+=
+"
+0
+.
+15
+"
+[
 dependencies
 ]
 bincode
