--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -10252,6 +10252,47 @@ changes
 [
 audits
 .
+cgl
+]
+]
+who
+=
+"
+Sotaro
+Ikeda
+<
+sotaro
+.
+ikeda
+.
+g
+gmail
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+version
+=
+"
+0
+.
+3
+.
+2
+"
+[
+[
+audits
+.
 chardetng
 ]
 ]
@@ -27227,6 +27268,90 @@ delta
 0
 .
 0
+"
+[
+[
+audits
+.
+leak
+]
+]
+who
+=
+"
+Sotaro
+Ikeda
+<
+sotaro
+.
+ikeda
+.
+g
+gmail
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+version
+=
+"
+0
+.
+1
+.
+2
+"
+[
+[
+audits
+.
+leaky
+-
+cow
+]
+]
+who
+=
+"
+Sotaro
+Ikeda
+<
+sotaro
+.
+ikeda
+.
+g
+gmail
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+version
+=
+"
+0
+.
+1
+.
+1
 "
 [
 [
