Bug 1920160: Part 7 - Adjust test expectations. r=jwatt
* `/css/css-align/abspos/stretch-intrinsic-size*`: Some tests still do not pass,
  because it uses `<canvas>` which overrides `nsIFrame::ComputeSize`, skipping
  the invocation of `nsIFrame::ComputeAbsoluteAutoSize`.
* `/css/css-anchor-position/`: Anchor positioning is not yet implemented,
  changes are coincidental.
* `grid-baseline-align-001.html`: Baseline alignment of absolutely-positioned
  grid item should no longer stretch it.

Differential Revision: https://phabricator.services.mozilla.com/D226533

UltraBlame original commit: 5d57a3a8d6aa34d439387ad9bb3730ecd8e99db0

--- a/testing/web-platform/meta/css/css-anchor-position/position-area-basic.html.ini
+++ b/testing/web-platform/meta/css/css-anchor-position/position-area-basic.html.ini
@@ -11,31 +11,6 @@ html
 Offsets
 for
 :
-span
--
-all
-]
-expected
-:
-FAIL
-[
-Offsets
-for
-:
-span
--
-all
-span
--
-all
-]
-expected
-:
-FAIL
-[
-Offsets
-for
-:
 top
 left
 ]
@@ -570,6 +545,27 @@ bottom
 span
 -
 all
+]
+expected
+:
+FAIL
+[
+Offsets
+for
+:
+none
+]
+expected
+:
+FAIL
+[
+Offsets
+for
+:
+span
+-
+all
+top
 ]
 expected
 :
