--- a/testing/web-platform/meta/css/css-align/abspos/stretch-intrinsic-size-vrl-vrl.html.ini
+++ b/testing/web-platform/meta/css/css-align/abspos/stretch-intrinsic-size-vrl-vrl.html.ini
@@ -14,6 +14,46 @@ html
 [
 .
 item
+1
+]
+expected
+:
+FAIL
+[
+.
+item
+2
+]
+expected
+:
+FAIL
+[
+.
+item
+3
+]
+expected
+:
+FAIL
+[
+.
+item
+5
+]
+expected
+:
+FAIL
+[
+.
+item
+7
+]
+expected
+:
+FAIL
+[
+.
+item
 8
 ]
 expected
