Bug 1928745 - build(webgpu): update WGPU to 16f012bc9327b23345b6feed754204acb6df6beb r=webgpu-reviewers,supply-chain-reviewers,nical
Also, vet WGPU 22.0.0 → 23.0.0 r=#supply-chain-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D227751

UltraBlame original commit: 4f705e6bd5e996dce5f291c0f36832fcd0b817bc

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -31181,29 +31181,6 @@ naga
 ]
 who
 =
-[
-"
-Teodor
-Tanasoaia
-<
-ttanasoaia
-mozilla
-.
-com
->
-"
-"
-Jim
-Blandy
-<
-jimb
-red
--
-bean
-.
-com
->
-"
 "
 Erich
 Gubler
@@ -31214,7 +31191,6 @@ gmail
 com
 >
 "
-]
 criteria
 =
 "
@@ -31234,14 +31210,58 @@ delta
 0
 -
 >
-22
+23
+.
+0
+.
+0
+"
+[
+[
+audits
+.
+naga
+]
+]
+who
+=
+"
+Erich
+Gubler
+<
+erichdongubler
+gmail
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+23
+.
+0
+.
+0
+-
+>
+23
 .
 0
 .
 0
 git
 :
-64a61ee5c69569bbb3db03563997e88a229eba17
+16f012bc9327b23345b6feed754204acb6df6beb
 "
 importable
 =
@@ -50667,29 +50687,6 @@ core
 ]
 who
 =
-[
-"
-Teodor
-Tanasoaia
-<
-ttanasoaia
-mozilla
-.
-com
->
-"
-"
-Jim
-Blandy
-<
-jimb
-red
--
-bean
-.
-com
->
-"
 "
 Erich
 Gubler
@@ -50700,7 +50697,6 @@ gmail
 com
 >
 "
-]
 criteria
 =
 "
@@ -50720,14 +50716,60 @@ delta
 0
 -
 >
-22
+23
+.
+0
+.
+0
+"
+[
+[
+audits
+.
+wgpu
+-
+core
+]
+]
+who
+=
+"
+Erich
+Gubler
+<
+erichdongubler
+gmail
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+23
+.
+0
+.
+0
+-
+>
+23
 .
 0
 .
 0
 git
 :
-64a61ee5c69569bbb3db03563997e88a229eba17
+16f012bc9327b23345b6feed754204acb6df6beb
 "
 importable
 =
@@ -51322,29 +51364,6 @@ hal
 ]
 who
 =
-[
-"
-Teodor
-Tanasoaia
-<
-ttanasoaia
-mozilla
-.
-com
->
-"
-"
-Jim
-Blandy
-<
-jimb
-red
--
-bean
-.
-com
->
-"
 "
 Erich
 Gubler
@@ -51355,7 +51374,6 @@ gmail
 com
 >
 "
-]
 criteria
 =
 "
@@ -51375,14 +51393,60 @@ delta
 0
 -
 >
-22
+23
+.
+0
+.
+0
+"
+[
+[
+audits
+.
+wgpu
+-
+hal
+]
+]
+who
+=
+"
+Erich
+Gubler
+<
+erichdongubler
+gmail
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+23
+.
+0
+.
+0
+-
+>
+23
 .
 0
 .
 0
 git
 :
-64a61ee5c69569bbb3db03563997e88a229eba17
+16f012bc9327b23345b6feed754204acb6df6beb
 "
 importable
 =
@@ -51977,29 +52041,6 @@ types
 ]
 who
 =
-[
-"
-Teodor
-Tanasoaia
-<
-ttanasoaia
-mozilla
-.
-com
->
-"
-"
-Jim
-Blandy
-<
-jimb
-red
--
-bean
-.
-com
->
-"
 "
 Erich
 Gubler
@@ -52010,7 +52051,6 @@ gmail
 com
 >
 "
-]
 criteria
 =
 "
@@ -52030,14 +52070,60 @@ delta
 0
 -
 >
-22
+23
+.
+0
+.
+0
+"
+[
+[
+audits
+.
+wgpu
+-
+types
+]
+]
+who
+=
+"
+Erich
+Gubler
+<
+erichdongubler
+gmail
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+23
+.
+0
+.
+0
+-
+>
+23
 .
 0
 .
 0
 git
 :
-64a61ee5c69569bbb3db03563997e88a229eba17
+16f012bc9327b23345b6feed754204acb6df6beb
 "
 importable
 =
